--- a/editar.html
+++ b/editar.html
@@ -65,10 +65,12 @@
   </div>
 </div>
     </header>
+    <main>
     <a href="./index.html" class="mt-3">Volver a Productos</a>
     <div id="product">
       
     </div>
+  </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
