--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   </div>
 </div>
     </header>
+    <main id="main">
     <form id="create" class="form mt-5">
       <input type="text" name="name" placeholder="Ingrese nombre del producto" required>
       <textarea name="desc" placeholder="Ingrese descripcion del producto" required></textarea>
@@ -79,6 +80,7 @@
     <div id="list">
       
     </div>
+  </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
