--- a/crear.html
+++ b/crear.html
@@ -66,7 +66,20 @@
 </div>
     </header>
     <main id="main">
-    <h1>ingrese o registrese como usuario</h1>
+    <form id="create" class="form mt-5">
+      <input type="text" name="name" placeholder="Ingrese nombre del producto" required>
+      <textarea name="desc" placeholder="Ingrese descripcion del producto" required></textarea>
+      <div>
+        <input type="number" name="price" placeholder="Ingrese precio" required>
+        <input type="number" name="stock" placeholder="Ingrese stock" min="1" max="100" required>
+      </div>
+      <input type="file" name="image" required>
+      <button class="btn" type="submit">Crear</button>
+    </form>
+    <h3 class="my-3">Listado de Productos</h3>
+    <div id="list">
+      
+    </div>
   </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
