--- a/editar.html
+++ b/editar.html
@@ -66,7 +66,7 @@
 </div>
     </header>
     <main>
-    <a href="./index.html" class="mt-3">Volver a Productos</a>
+    <a href="./crear.html#productos" class="mt-3">Volver a Productos</a>
     <div id="product">
       
     </div>
