--- a/crear.html
+++ b/crear.html
@@ -67,14 +67,14 @@
     </header>
     <main id="main">
     <form id="create" class="form mt-5">
-      <input type="text" name="name" placeholder="Ingrese nombre del producto" required>
-      <textarea name="desc" placeholder="Ingrese descripcion del producto" required></textarea>
+      <input type="text" name="name" class="form-control" placeholder="Ingrese nombre del producto" required>
+      <textarea name="desc" class="form-control" placeholder="Ingrese descripcion del producto" required></textarea>
       <div>
-        <input type="number" name="price" placeholder="Ingrese precio" required>
-        <input type="number" name="stock" placeholder="Ingrese stock" min="1" max="100" required>
+        <input type="number" class="form-control" name="price" placeholder="Precio" required>
+        <input type="number" class="form-control" name="stock" placeholder="stock" min="1" max="100" required>
       </div>
-      <input type="file" name="image" required>
-      <button class="btn" type="submit">Crear</button>
+      <input type="file" class="form-control" name="image" required>
+      <button class="btn btn-primary" type="submit">Crear</button>
     </form>
     <h3 class="my-3">Listado de Productos</h3>
     <div id="list">
